# StudentSystem

./: .gitignore  .gitmodules  AUTO_VERSIONING.md  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT.md  DOWNLOAD.md  ELAWIDGETTOOLS_INTEGRATION.md  GITHUB_ACTIONS.md  ICON_SETUP.md  ICON_UPDATE.md  ModernAvatar.cpp  ModernAvatar.h  QUICK_START.md  README.md  RUN_ME_FIRST.md  app_icon.rc  cardwidget.h  flatcardwidget.cpp  flatcardwidget.h  loginwindow.cpp  loginwindow.h  main.cpp  main_simple.cpp  mainwindow.cpp  mainwindow.h  mainwindow_test.cpp  operationlog.cpp  operationlog.h  resources.qrc  student.cpp  student.h  user.cpp  user.h  usermanager.cpp  usermanager.h
.github/workflows/: build.yml
QtAntDesignLib/: AntMessageManager.cpp  QtAntDesign.qrc
